# amplifier-collection-convergent-dev

./: MANIFEST.in  README.md  README_TEMPLATE.json  pyproject.toml
agents/: backlog-organizer.md  beads-expert.md  bug-hunter.md  convergence-architect.md  issue-capturer.md  modular-builder.md  post-sprint-cleanup.md  post-task-cleanup.md  sprint-planner.md  tdd-specialist.md  zen-architect.md
context/commands/: 0-help.md  1-converge.md  2-plan-sprints.md  4-capture-issues.md  status.md
context/workflows/: CONVERGENCE_PROCESS.md  ISSUE_CAPTURE.md  README.md  SPRINT_PLANNING.md  TDD_CYCLE.md
convergent_dev/: __init__.py  pyproject.toml
convergent_dev/context/commands/: 1-converge.md  2-plan-sprints.md  3-tdd-cycle.md
convergent_dev/context/workflows/: CONVERGENCE_PROCESS.md
profiles/: convergent-dev.md
