[project]
name = "amplifier-collection-convergent-dev"
version = "1.0.0"
description = "Convergent development workflow for Amplifier - from ideation to implementation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Microsoft Corporation" }
]
keywords = [
    "amplifier",
    "collection",
    "convergent-development",
    "workflow",
    "tdd",
    "sprint-planning",
    "agile"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "amplifier-collection-foundation>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-collection-convergent-dev"
Documentation = "https://github.com/microsoft/amplifier-collection-convergent-dev#readme"
Repository = "https://github.com/microsoft/amplifier-collection-convergent-dev"
Issues = "https://github.com/microsoft/amplifier-collection-convergent-dev/issues"

[project.entry-points."amplifier.collections"]
convergent-dev = "convergent_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["convergent_dev"]
