[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "convergent-dev"
version = "1.0.0"
description = "Convergent development workflow for Amplifier - from ideation to implementation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Amplifier Team"}
]

[project.urls]
homepage = "https://github.com/microsoft/amplifier"
repository = "https://github.com/microsoft/amplifier"
documentation = "https://github.com/microsoft/amplifier/tree/main/amplifier-collection-convergent-dev"

[tool.setuptools]
# Find packages automatically
packages = {find = {}}

[tool.setuptools.package-data]
# Include all markdown and metadata files
"*" = ["*.md", "*.toml"]

[tool.amplifier.collection]
author = "Amplifier Team"
capabilities = [
    "Ten specialized workflow agents for complete development lifecycle",
    "Four core workflows: Convergence, Sprint Planning, TDD Implementation, Issue Tracking",
    "Complete methodology documentation for convergent development process",
    "Transform divergent exploration into focused implementation through systematic workflows",
    "Value-first delivery with Test-Driven Development and ruthless simplicity"
]

[tool.amplifier.collection.requires]
foundation = "^1.0.0"
